# physics-test

./: Cargo.toml
assets/: anim_idle.glb  anim_run.glb  ybot.glb
src/: animation.rs  camera.rs  controls.rs  debug.rs  enemy.rs  items.rs  main.rs  movement.rs  physics.rs  preload_assets.rs  rendering.rs  ui_overlay.rs  util.rs
