[package]
name = "physics-test"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "jpeg",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "trace"
     ] }

bevy_kira_audio = { version = "0.10.0", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.11.0"
serde = "1.0"
ron = "0.7"
rand = "0.8"
bevy_rapier3d = { version = "0.15.0", features = ["debug-render"] }
bevy_tweening = "0.4.0"

# cargo run --release --features bevy/trace,bevy/trace_chrome
